# dots-hypr

./: .gdbinit  .gdbnew.py  .gdbnew.py.bak  .gdbnew2.py  .gdbnewheap.py  .gitignore  .gitmodules  README.md  arch_source.sh  aur.sh  dev.sh  fstab.example  fstab.sh  func.sh  install.sh  nvidia.sh  package.sh  packages.sh  pacman.conf  px  rankmirrors  root  root.sh  source.sh  up.sh  update.sh  wifite.sh  xfce4-appearance-settings
.bin/: gdb.sh  gdbheap.sh
.fonts/jetbrain/: .uuid
.fonts/victor/: .uuid
.gdb/gef/: .gdbinit
.gdb/pwndbg/: .gdbinit
.ghidra/.ghidra_11.0.3_PUBLIC/: FrontEndTool.xml
.github/: blank2.yml  main.yml
.idapro/: ida.reg  proccache64.lst  shortcuts.cfg
.old/: .gdbnew.py  .gdbnew.py.bak  .gdbnew.py.bak.bak
ags/: style.css.map
cache/: dependencies_stripped.conf
config/: chrome-flags.conf  chromium-flags.conf
config/ags/config/: _color.scss  app.in.c  app.in.vala  app.vala  bar.vala  build.sh  compile_commands.json  meson.build  simple-bar  style.css  style.css.map  style.scss  test  test.vala
config/ags/config/.old/: app.ts  bar.tsx  config.js  config2.js  config3.ts  style.css
config/ags/config/widget/: Bar.c  Bar.vala
custom/: 00-dkms-global-gcc.hook  brightnessctl  dkms-global-gcc  fstab  randomdis  randomdis.service
dots-hypr/: .gdbinit  .gitignore  .tmux.conf
havefuns/: google.dark  randomdis  randomdis.service  setcolors
hypr/: hyprland.conf  hyprlock.conf  play  play.c  play2.c
nvim/: coc-settings.json  init.lua  lazy-lock.json  vimspector.json
scriptdata/: dependencies.conf  installers  legacy
(+591 files in other folders)
